
Version 1.0-8

o Small fixes to the help files.

Version 1.0-9

o Small change to compile without a warning in R 2.4.0.

Version 1.0-10

o Standard errors of effects are computed using t rather than standard-normal distribution for models with estimated dispersion (as suggested by Brian Ripley).

o Small fixes.

o Objects are now named "eff" and "eff.list" rather than "effect" and "effect.list".

o Data sets now provided by lazy data.

Version 1.0-11

o Replaced obsolete \non_function{} markup in Rd files (reported by Kurt Hornik).

Version 1.0-12

o key.args argument added to plot.eff() (coutesy of Michael Friendly), to allow conrol over, e.g., placement of legend.

Version 2.0-0

o Jangman Hong joins project.

o support added for multinomial and proportional-odds logit models, as fit by multinom() (in nnet package) and polr() (in MASS) package, following results in Fox and Andersen (2006).

o added the argument given.values to effect() methods for finer-grain control of displays.

Version 2.0-1

o Fixed bug in effect.polr() that prevented computation for a model with a single term (reported by Paul Prew).

Version 2.0-2

o Fixed bug in print(), summary(), and plot() methods for polytomous logit models with a response with numbered levels (reported by Paul Prew).

Version 2.0-3

o Fixed bug in all effect() methods that caused error when na.action="na.exclude" (reported by Tracy Lightcap and Rob Goedman).

Version 2.0-4

o Palettes from the colorspace package are used by default for stacked plots.

o Fixed bug in handling of typical= argument to effect() (argument was effectively ignored).

o Added Titanic and Wells data sets.

o Small changes.

Version 2.0-5

o Added examples for Titanic, BEPS, and WVS data sets.

o Arguments ... (e.g., digits) passed through in print() methods.

Version 2.0-6

o Fixed small bugs in print.efflist(), summary.efflist(), and plot.effpoly() methods.